--- a/c1_proponer_datos/.project
+++ b/c1_proponer_datos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cliente</name>
+	<name>c1_proponer_datos</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1733766969990</id>
+			<id>1733766969978</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
